--- a/src/main/resources/templates/blogpost/result.html
+++ b/src/main/resources/templates/blogpost/result.html
@@ -15,12 +15,23 @@
 </head>
 
 <body>
-	<h3>Blog Post Form</h3>
-	<p>Thank you for your submission!</p>
-	<h4>Blog Post:</h4>
-	<p th:text="${title}" />
-	<p th:text="${author}" />
-	<p th:text="${blogEntry}" />
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h3>Blog Post Form</h3>
+				<p>Thank you for your submission!</p>
+				<h4>Blog Post:</h4>
+				<p th:text="${title}" />
+				<p th:text="${author}" />
+				<p th:text="${blogEntry}" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<a th:href="@{/}"><button class="btn btn-success">Back To Home Page</button></a>
+				<a th:href="@{/blog_posts/new}"><button class="btn btn-primary">Submit a New Blog Post</button></a>
+			</div>
+		</div>
 </body>
 
 </html>
