--- a/src/main/resources/templates/blogpost/new.html
+++ b/src/main/resources/templates/blogpost/new.html
@@ -16,33 +16,22 @@
 
 <body>
 	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<p>Please use the form below to submit a Blog Post:</p>
+		<h1>Create a New Blog Post</h1>
+		<form action="#" th:action="@{/blogposts}" th:object="${blogPost}" method="post">
+
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Blog Title..." th:field="*{title}" />
 			</div>
-			<div class="col-12">
-				<form action="#" th:action="@{/blogposts}" th:object="${blogPost}" method="post">
-					<table>
-						<tr>
-							<td>Title</td>
-							<td><input type="text" th:field="*{title}" /></td>
-						</tr>
-						<tr>
-							<td>Author:</td>
-							<td><input type="text" th:field="*{author}" /></td>
-						</tr>
-						<tr>
-							<td>Blog Entry:</td>
-							<td><input type="text" th:field="*{blogEntry}" /></td>
-						</tr>
-						<tr>
-							<td><button type="submit">Submit Your Post</button></td>
-						</tr>
-					</table>
-				</form>
+
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Your Name Here..." th:field="*{author}" />
 			</div>
-		</div>
-	</div>
+
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Blog Entry" th:field="*{blogEntry}" />
+			</div>
+
+			<button class="btn btn-primary">Submit Your Post</button>
 </body>
 
 </html>
