--- a/src/main/resources/templates/blogpost/index.html
+++ b/src/main/resources/templates/blogpost/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
 		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<link th:href="@{/css/standard.css}" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 		crossorigin="anonymous"></script>
@@ -17,34 +18,33 @@
 <body>
 	<div class="container">
 		<h1>Welcome to Our Blog Post Site!</h1>
-		<h3>Check out our blogs!</h3>
-		<div class="row">
-			<div th:each="blog:${posts}" class="col-6">
 
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<p th:text="${blog.title}" />
-					</div>
-					<div class="panel-body">
-						<p th:text="${blog.author}" />
-						<p th:text="${blog.blogEntry}" />
-					</div>
-					<div class="panel-footer">
-						<!-- Link to Update -->
-						<!-- Link to Show  -->
-						<!--  Link to Destroy -->
+		<div class="row">
+			<div th:each="blog:${posts}" class="col-md-12">
+				<div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h2 th:text="${blog.title}"></h2>
+						</div>
+						<div class="panel-body">
+							<strong>
+								<p th:text="${blog.author}" />
+							</strong>
+							<p th:text="${blog.blogEntry}" />
+						</div>
+						<div class="panel-footer">
+							<!-- Link to Update -->
+							<!-- Link to Show  -->
+							<!--  Link to Destroy -->
+							Buttons
+						</div>
 					</div>
 				</div>
+			</div>
+		</div>
 
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<a th:href="@{/blogposts/new}">
-					<button class="btn btn-primary">Submit a New Blog Post</button>
-				</a>
-			</div>
-		</div>
+		<a th:href="@{/blogposts/new}"><button class="btn btn-primary">Submit a New Blog Post</button></a>
+
 	</div>
 </body>
 
