delete is working

--- a/src/main/resources/templates/blogpost/index.html
+++ b/src/main/resources/templates/blogpost/index.html
@@ -31,6 +31,7 @@
 								<p th:text="${blog.author}" />
 							</strong>
 							<p th:text="${blog.blogEntry}" />
+							<p th:text="${blog.id}" />
 						</div>
 						<div class="panel-footer">
 							<!-- Link to Update -->
@@ -39,13 +40,11 @@
 							<form action="#" th:action="@{'/blogposts/{id}'(id=${blog.id})}" th:method="delete"
 								class="form-horizontal">
 								<div class="form-group">
-									<input type="hidden" name="id" th:value="${blog.id}">
 									<input type="hidden" name="_method" value="delete" />
 									<button type="submit" class="btn btn-danger btn-block"
 										th:text="Delete">Delete</button>
 								</div>
 							</form>
-
 						</div>
 					</div>
 				</div>
@@ -53,7 +52,7 @@
 			</div>
 		</div>
 
-		<a th:href="@{/blogposts/new}"><button class="btn btn-primary">Submit a New Blog Post</button></a>
+		<a th:href=" @{/blogposts/new}"><button class="btn btn-primary">Submit a New Blog Post</button></a>
 
 	</div>
 </body>
