--- a/src/main/resources/templates/blogpost/new.html
+++ b/src/main/resources/templates/blogpost/new.html
@@ -2,20 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Blog Site</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-	<link th:href="@{/css/standard.css}" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-		crossorigin="anonymous"></script>
+	<div th:replace="fragments/styling :: styling"></div>
 </head>
 
 <body>
+<div th:replace="fragments/navbar :: navbar"></div>
 	<div class="container">
 		<h1>Create a New Blog Post</h1>
 		<form action="#" th:action="@{/blogposts}" th:object="${blogPost}" method="post">
